# naive_interp_lib

./: CMakeLists.txt  README.md  todos.txt
include/: concurrency.h  container_type_traits.h  interp.h  interp1d.h  interp1d_algs.h  interp1d_types.h  interp2d.h  interp2d_algs.h  interp2d_types.h  interp_make.h  utils.h
include/_1d/: do_i_1d.h  i_1d.h  i_1d_alg.h  i_1d_any.h  i_1d_cubic_alg.h  i_1d_linear_alg.h  i_1d_msg.h  i_1d_nearest_neighbour_alg.h  i_1d_next_alg.h  i_1d_prev_alg.h  i_1d_quadratic_alg.h  i_1d_types.h  i_1d_utils.h  interp1d.h  interp1d_algs.h  interp1d_base.h  interp1d_gsl.h  interp1d_types.h  make_i_1d.h
include/_2d/: interp2d.h  interp2d_base.h  interp2d_idw.h  interp2d_nn.h  interp2d_rbf.h  interp2d_scat.h  interp2d_tin.h  interp2d_types.h
include/any_interp/: any_interp.h
include/making/: interp_do.h  interp_make.h
include/prod/: do_i.h  make_i.h
include/utility/: any_interp.h  concepts.h  concurrency.h  container_type_traits.h  exec.h  macros.h  params.h  using_names.h  utils.h
test/: CMakeLists.txt  test_utils.h
test/_1d/algs_accuracy_test/: CMakeLists.txt  main.cpp
test/_1d/any_interp/: CMakeLists.txt  main.cpp
test/_1d/base/: CMakeLists.txt  main.cpp
test/_1d/google_benchmark_test/: CMakeLists.txt  main.cpp
test/_1d/gperf_test/: CMakeLists.txt  main.cpp
test/_1d/perf/: main.cpp
test/_1d/plot/: CMakeLists.txt  main.cpp
test/_2d/base/: CMakeLists.txt  main.cpp
test/_2d/perf_rbf/: CMakeLists.txt  main.cpp
test/_2d/perf_scat/: CMakeLists.txt  main.cpp
test/_2d/plot_rbf/: CMakeLists.txt  main.cpp
test/_2d/plot_scat/: CMakeLists.txt  main.cpp
test/_2d/rbf_perf/: CMakeLists.txt  main.cpp
test/_2d/rbf_plot/: CMakeLists.txt  main.cpp
test/_2d/scat_perf/: CMakeLists.txt  main.cpp
test/_2d/scat_plot/: CMakeLists.txt  main.cpp
test/test_1d/: CMakeLists.txt  main.cpp  test_utils.h
test/test_1d_perf/: CMakeLists.txt  main.cpp
test/test_1d_plot/: CMakeLists.txt  main.cpp
test/test_2d/: CMakeLists.txt  main.cpp
test/test_2d_perf/: CMakeLists.txt  main.cpp
test/test_2d_plot/: CMakeLists.txt  main.cpp
test/test_perf_1d/: CMakeLists.txt
